--- a/class/04_text-file/program_jupyter.ipynb
+++ b/class/04_text-file/program_jupyter.ipynb
@@ -13,26 +13,260 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('vgsales.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'vgsales.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mUntitled-1.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:Untitled-1.ipynb?jupyter-notebook#W1sdW50aXRsZWQ%3D?line=0'>1</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_csv(\u001b[39m'\u001b[39;49m\u001b[39mvgsales.csv\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "File \u001b[1;32mc:\\Users\\Nasywa Azizah\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:948\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m    935\u001b[0m kwds_defaults \u001b[39m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m    936\u001b[0m     dialect,\n\u001b[0;32m    937\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    944\u001b[0m     dtype_backend\u001b[39m=\u001b[39mdtype_backend,\n\u001b[0;32m    945\u001b[0m )\n\u001b[0;32m    946\u001b[0m kwds\u001b[39m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m--> 948\u001b[0m \u001b[39mreturn\u001b[39;00m _read(filepath_or_buffer, kwds)\n",
-      "File \u001b[1;32mc:\\Users\\Nasywa Azizah\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:611\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    608\u001b[0m _validate_names(kwds\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mnames\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[0;32m    610\u001b[0m \u001b[39m# Create the parser.\u001b[39;00m\n\u001b[1;32m--> 611\u001b[0m parser \u001b[39m=\u001b[39m TextFileReader(filepath_or_buffer, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwds)\n\u001b[0;32m    613\u001b[0m \u001b[39mif\u001b[39;00m chunksize \u001b[39mor\u001b[39;00m iterator:\n\u001b[0;32m    614\u001b[0m     \u001b[39mreturn\u001b[39;00m parser\n",
-      "File \u001b[1;32mc:\\Users\\Nasywa Azizah\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1448\u001b[0m, in \u001b[0;36mTextFileReader.__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m   1445\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moptions[\u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m kwds[\u001b[39m\"\u001b[39m\u001b[39mhas_index_names\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m   1447\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles: IOHandles \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m-> 1448\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_make_engine(f, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mengine)\n",
-      "File \u001b[1;32mc:\\Users\\Nasywa Azizah\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1705\u001b[0m, in \u001b[0;36mTextFileReader._make_engine\u001b[1;34m(self, f, engine)\u001b[0m\n\u001b[0;32m   1703\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m mode:\n\u001b[0;32m   1704\u001b[0m         mode \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m-> 1705\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles \u001b[39m=\u001b[39m get_handle(\n\u001b[0;32m   1706\u001b[0m     f,\n\u001b[0;32m   1707\u001b[0m     mode,\n\u001b[0;32m   1708\u001b[0m     encoding\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mencoding\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mNone\u001b[39;49;00m),\n\u001b[0;32m   1709\u001b[0m     compression\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mcompression\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mNone\u001b[39;49;00m),\n\u001b[0;32m   1710\u001b[0m     memory_map\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mmemory_map\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mFalse\u001b[39;49;00m),\n\u001b[0;32m   1711\u001b[0m     is_text\u001b[39m=\u001b[39;49mis_text,\n\u001b[0;32m   1712\u001b[0m     errors\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mencoding_errors\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mstrict\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[0;32m   1713\u001b[0m     storage_options\u001b[39m=\u001b[39;49m\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49moptions\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mstorage_options\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39mNone\u001b[39;49;00m),\n\u001b[0;32m   1714\u001b[0m )\n\u001b[0;32m   1715\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   1716\u001b[0m f \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandles\u001b[39m.\u001b[39mhandle\n",
-      "File \u001b[1;32mc:\\Users\\Nasywa Azizah\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\io\\common.py:863\u001b[0m, in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    858\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(handle, \u001b[39mstr\u001b[39m):\n\u001b[0;32m    859\u001b[0m     \u001b[39m# Check whether the filename is to be opened in binary mode.\u001b[39;00m\n\u001b[0;32m    860\u001b[0m     \u001b[39m# Binary mode does not support 'encoding' and 'newline'.\u001b[39;00m\n\u001b[0;32m    861\u001b[0m     \u001b[39mif\u001b[39;00m ioargs\u001b[39m.\u001b[39mencoding \u001b[39mand\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mb\u001b[39m\u001b[39m\"\u001b[39m \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m ioargs\u001b[39m.\u001b[39mmode:\n\u001b[0;32m    862\u001b[0m         \u001b[39m# Encoding\u001b[39;00m\n\u001b[1;32m--> 863\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(\n\u001b[0;32m    864\u001b[0m             handle,\n\u001b[0;32m    865\u001b[0m             ioargs\u001b[39m.\u001b[39;49mmode,\n\u001b[0;32m    866\u001b[0m             encoding\u001b[39m=\u001b[39;49mioargs\u001b[39m.\u001b[39;49mencoding,\n\u001b[0;32m    867\u001b[0m             errors\u001b[39m=\u001b[39;49merrors,\n\u001b[0;32m    868\u001b[0m             newline\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[0;32m    869\u001b[0m         )\n\u001b[0;32m    870\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    871\u001b[0m         \u001b[39m# Binary mode\u001b[39;00m\n\u001b[0;32m    872\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(handle, ioargs\u001b[39m.\u001b[39mmode)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'vgsales.csv'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Platform</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Genre</th>\n",
+       "      <th>Publisher</th>\n",
+       "      <th>NA_Sales</th>\n",
+       "      <th>EU_Sales</th>\n",
+       "      <th>JP_Sales</th>\n",
+       "      <th>Other_Sales</th>\n",
+       "      <th>Global_Sales</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Wii Sports</td>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>41.49</td>\n",
+       "      <td>29.02</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>8.46</td>\n",
+       "      <td>82.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Super Mario Bros.</td>\n",
+       "      <td>NES</td>\n",
+       "      <td>1985.0</td>\n",
+       "      <td>Platform</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>29.08</td>\n",
+       "      <td>3.58</td>\n",
+       "      <td>6.81</td>\n",
+       "      <td>0.77</td>\n",
+       "      <td>40.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Mario Kart Wii</td>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>Racing</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>15.85</td>\n",
+       "      <td>12.88</td>\n",
+       "      <td>3.79</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>35.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Wii Sports Resort</td>\n",
+       "      <td>Wii</td>\n",
+       "      <td>2009.0</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>15.75</td>\n",
+       "      <td>11.01</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>2.96</td>\n",
+       "      <td>33.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Pokemon Red/Pokemon Blue</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>1996.0</td>\n",
+       "      <td>Role-Playing</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>11.27</td>\n",
+       "      <td>8.89</td>\n",
+       "      <td>10.22</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>31.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16593</th>\n",
+       "      <td>16596</td>\n",
+       "      <td>Woody Woodpecker in Crazy Castle 5</td>\n",
+       "      <td>GBA</td>\n",
+       "      <td>2002.0</td>\n",
+       "      <td>Platform</td>\n",
+       "      <td>Kemco</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16594</th>\n",
+       "      <td>16597</td>\n",
+       "      <td>Men in Black II: Alien Escape</td>\n",
+       "      <td>GC</td>\n",
+       "      <td>2003.0</td>\n",
+       "      <td>Shooter</td>\n",
+       "      <td>Infogrames</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16595</th>\n",
+       "      <td>16598</td>\n",
+       "      <td>SCORE International Baja 1000: The Official Game</td>\n",
+       "      <td>PS2</td>\n",
+       "      <td>2008.0</td>\n",
+       "      <td>Racing</td>\n",
+       "      <td>Activision</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16596</th>\n",
+       "      <td>16599</td>\n",
+       "      <td>Know How 2</td>\n",
+       "      <td>DS</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Puzzle</td>\n",
+       "      <td>7G//AMES</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16597</th>\n",
+       "      <td>16600</td>\n",
+       "      <td>Spirits &amp; Spells</td>\n",
+       "      <td>GBA</td>\n",
+       "      <td>2003.0</td>\n",
+       "      <td>Platform</td>\n",
+       "      <td>Wanadoo</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>16598 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Rank                                              Name Platform  \\\n",
+       "0          1                                        Wii Sports      Wii   \n",
+       "1          2                                 Super Mario Bros.      NES   \n",
+       "2          3                                    Mario Kart Wii      Wii   \n",
+       "3          4                                 Wii Sports Resort      Wii   \n",
+       "4          5                          Pokemon Red/Pokemon Blue       GB   \n",
+       "...      ...                                               ...      ...   \n",
+       "16593  16596                Woody Woodpecker in Crazy Castle 5      GBA   \n",
+       "16594  16597                     Men in Black II: Alien Escape       GC   \n",
+       "16595  16598  SCORE International Baja 1000: The Official Game      PS2   \n",
+       "16596  16599                                        Know How 2       DS   \n",
+       "16597  16600                                  Spirits & Spells      GBA   \n",
+       "\n",
+       "         Year         Genre   Publisher  NA_Sales  EU_Sales  JP_Sales  \\\n",
+       "0      2006.0        Sports    Nintendo     41.49     29.02      3.77   \n",
+       "1      1985.0      Platform    Nintendo     29.08      3.58      6.81   \n",
+       "2      2008.0        Racing    Nintendo     15.85     12.88      3.79   \n",
+       "3      2009.0        Sports    Nintendo     15.75     11.01      3.28   \n",
+       "4      1996.0  Role-Playing    Nintendo     11.27      8.89     10.22   \n",
+       "...       ...           ...         ...       ...       ...       ...   \n",
+       "16593  2002.0      Platform       Kemco      0.01      0.00      0.00   \n",
+       "16594  2003.0       Shooter  Infogrames      0.01      0.00      0.00   \n",
+       "16595  2008.0        Racing  Activision      0.00      0.00      0.00   \n",
+       "16596  2010.0        Puzzle    7G//AMES      0.00      0.01      0.00   \n",
+       "16597  2003.0      Platform     Wanadoo      0.01      0.00      0.00   \n",
+       "\n",
+       "       Other_Sales  Global_Sales  \n",
+       "0             8.46         82.74  \n",
+       "1             0.77         40.24  \n",
+       "2             3.31         35.82  \n",
+       "3             2.96         33.00  \n",
+       "4             1.00         31.37  \n",
+       "...            ...           ...  \n",
+       "16593         0.00          0.01  \n",
+       "16594         0.00          0.01  \n",
+       "16595         0.00          0.01  \n",
+       "16596         0.00          0.01  \n",
+       "16597         0.00          0.01  \n",
+       "\n",
+       "[16598 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('vgsales.csv')"
+    "df"
    ]
   }
  ],
